[package]
name = "traced"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
eframe = { version = "0.29.1", features = ["wgpu", "wayland", "x11", "default_fonts"], default-features = false }
egui = "0.29.1"
env_logger = "0.11.5"
tokio = { version = "1.0", features = ["rt-multi-thread"], default-features = false }
tracert = "0.8.0"
walkers = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
log = "0.4.22"
dns-lookup = "2.0.4"
egui_extras = { version = "0.29.1", features = ["image"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
